Bug 339565. Gogle.com textfield autocomplete shows unexpectedly with GOK. Patch by Nian Liu. r=aaronlev, sr=neil